--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   path_provider: ^2.1.0
   supabase_flutter: ^2.8.3
   uuid: ^4.5.1
+  flutter_datetime_picker_plus: ^2.2.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
