menambahkan chart/grafik untuk perkembangan berat badan

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
 dependencies:
   dotted_border: ^2.1.0
   equatable: ^2.0.7
+  fl_chart: ^0.66.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_datetime_picker_plus: ^2.2.0
   fpdart: ^1.1.1
   get_it: ^8.0.3
   hive: ^4.0.0-dev.2
@@ -22,7 +24,6 @@ dependencies:
   path_provider: ^2.1.0
   supabase_flutter: ^2.8.3
   uuid: ^4.5.1
-  flutter_datetime_picker_plus: ^2.2.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
