--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
+  collection: ^1.18.0
   dotted_border: ^2.1.0
   equatable: ^2.0.7
   fl_chart: ^0.66.0
